# mesh

./: Cargo.toml  mesh_state.json
.cargo/: config.toml
mesh/: Cargo.toml
mesh-cli/: Cargo.toml
mesh-cli/src/: main.rs
mesh-core/: Cargo.toml
mesh-core/src/: cache.rs  config.rs  core.rs  database.rs  lib.rs
mesh-core/src/cache/: database.rs  thumbnail.rs
mesh/src/: app_menus.rs  lib.rs  main.rs  themes.rs  title_bar.rs
src/: lib.rs  main.rs  themes.rs
