[workspace]
resolver = "2"
members = ["mesh*"]
default-members = ["mesh"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.8"
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
image = "0.25.9"
log = "0.4.28"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
walkdir = "2.5.0"

# [profile.dev]
# lto = false
# incremental = true
# # inherits      = "release"
# codegen-units = 256
